Fix deprecated features
This also fixes the issue where scrollbars weren't working properly.

I'm wikibear. Yaaaayyyyyyy.

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -1,22 +1,22 @@
 @import "ui-variables";
 
-.workspace {
+atom-workspace {
   background-color: @app-background-color;
   border-top: 1px solid rgba(0, 0, 0, .4);
 }
 
 .scrollbars-visible-always {
-  ::-webkit-scrollbar {
+  /deep/ ::-webkit-scrollbar {
     width: 13px;
     height: 13px;
   }
 
-  ::-webkit-scrollbar-track,
-  ::-webkit-scrollbar-corner {
+  /deep/ ::-webkit-scrollbar-track,
+  /deep/ ::-webkit-scrollbar-corner {
     background: @scrollbar-background-color;
   }
 
-  ::-webkit-scrollbar-thumb {
+  /deep/ ::-webkit-scrollbar-thumb {
     background: @scrollbar-color;
     border: 3px solid @scrollbar-background-color;
     border-radius: 6.5px;
