--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 @import "ui-mixins";
 
-.editor.mini {
+atom-text-editor[mini] {
   color: @text-color;
   background-color: @input-background-color;
   border: 1px solid @input-border-color;
@@ -13,12 +13,12 @@
   .selection .region { background-color: rgba(0, 0, 0, .2); }
 }
 
-.editor.editor-colors.mini.is-focused {
+atom-text-editor[mini].is-focused {
   background-color: lighten(@input-background-color, 5%);
   .selection .region { background-color: lighten(@background-color-info, 30%); }
 }
 
 // FIXME: these should go in syntax themes?
-.editor .gutter.drop-shadow {
+atom-text-editor::shadow .gutter.drop-shadow {
   -webkit-box-shadow: -2px 0 10px 2px #222;
 }
